# iPet

./: .gitignore  README.md  bubble.html  index.html  package-lock.json  package.json  settings.html  vite.config.ts
.github/workflows/: release.yml
docs/: Phase-2.2-Plan.md  iPet-Sprite-Assets-Guide.md  prd.md  voice-control-plan.md  voice-open-app-plan.md
public/sprites/slime/: config.json
scripts/: build-release.sh
src/: App.css  App.tsx  bubble.tsx  settings-main.tsx
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/BubbleWindow/: BubbleWindow.css  BubbleWindow.tsx
src/components/EnergyBar/: EnergyBar.css  EnergyBar.tsx  index.ts
src/components/HappinessBar/: HappinessBar.css  HappinessBar.tsx  index.ts
src/components/MoodIndicator/: MoodIndicator.css  MoodIndicator.tsx  index.ts
src/components/Pet/: Pet.css  Pet.tsx  SpeechBubble.tsx  index.ts
src/components/Settings/: Settings.css  Settings.tsx
src/hooks/: useKeyboardShortcuts.ts  useMood.ts  usePetDrag.ts  useSettings.ts  useSprite.ts  useStatChangeDetector.ts  useVoiceInput.ts
src/services/: GeminiService.ts  MoodService.ts  PermissionService.ts  PetBehavior.ts  SettingsService.ts  SpeechRecognitionService.ts  SpriteLoader.ts  SpriteRenderer.ts
src/types/: index.ts  mood.ts  settings.ts  sprite.ts
src/types/mood/: constants.ts  helpers.ts  index.ts  types.ts
