[package]
name = "ipet"
version = "0.1.0"
description = "A cute desktop pet for macOS"
authors = ["vule"]
edition = "2021"

[lib]
name = "ipet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
tauri-plugin-macos-permissions = "2.3.0"
base64 = "0.22.1"
aes-gcm = "0.10.3"
rand = "0.9.2"
hostname = "0.4.2"

